--- a/src/RestaurantMain/Restaurant.form
+++ b/src/RestaurantMain/Restaurant.form
@@ -647,8 +647,8 @@
         <Container class="javax.swing.JPanel" name="jPanel3">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Display Order Report">
-                <Property name="tabTitle" type="java.lang.String" value="Display Order Report"/>
+              <JTabbedPaneConstraints tabName="Dsiplay Order Report">
+                <Property name="tabTitle" type="java.lang.String" value="Dsiplay Order Report"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
